--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@editorjs/table",
-  "description": "Table for Editor.js",
-  "version": "2.0.2",
+  "name": "@ct-note/table",
+  "description": "A clone from Table for Editor.js",
+  "version": "1.0.0",
   "license": "MIT",
   "main": "./dist/table.js",
   "scripts": {
@@ -9,11 +9,11 @@
     "build:dev": "webpack --mode development --watch",
     "lint": "eslint -c ./.eslintrc --ext .js --fix ."
   },
-  "repository": "https://github.com/editor-js/table",
-  "author": {
-    "name": "CodeX Team",
-    "email": "team@ifmo.su"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ChesterChuTw/editor-js-table.git"
   },
+  "author": "CodeX Team <team@ifmo.su>",
   "keywords": [
     "codex",
     "codex-editor",
@@ -35,5 +35,550 @@
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3"
+  },
+  "bugs": {
+    "url": "https://github.com/ChesterChuTw/editor-js-table/issues"
+  },
+  "homepage": "https://github.com/ChesterChuTw/editor-js-table#readme",
+  "dependencies": {
+    "ajv": "^6.5.5",
+    "acorn-dynamic-import": "^4.0.0",
+    "acorn": "^6.4.2",
+    "acorn-jsx": "^5.0.0",
+    "ajv-keywords": "^3.2.0",
+    "ajv-errors": "^1.0.0",
+    "alphanum-sort": "^1.0.2",
+    "ansi-escapes": "^3.1.0",
+    "anymatch": "^2.0.0",
+    "ansi-regex": "^2.1.1",
+    "ansi-styles": "^3.2.1",
+    "argparse": "^1.0.10",
+    "arr-diff": "^4.0.0",
+    "aproba": "^1.2.0",
+    "arr-union": "^3.1.0",
+    "array-uniq": "^1.0.3",
+    "asn1.js": "^4.10.1",
+    "arr-flatten": "^1.1.0",
+    "array-union": "^1.0.2",
+    "assert": "^1.4.1",
+    "array-unique": "^0.3.2",
+    "assign-symbols": "^1.0.0",
+    "async-each": "^1.0.1",
+    "atob": "^2.1.2",
+    "base": "^0.11.2",
+    "babel-code-frame": "^6.26.0",
+    "balanced-match": "^1.0.0",
+    "big.js": "^3.2.0",
+    "binary-extensions": "^1.12.0",
+    "base64-js": "^1.3.0",
+    "bluebird": "^3.5.3",
+    "bn.js": "^4.12.0",
+    "boolbase": "^1.0.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^2.3.2",
+    "brorand": "^1.1.0",
+    "browserify-aes": "^1.2.0",
+    "browserify-cipher": "^1.0.1",
+    "browserify-des": "^1.0.2",
+    "browserify-rsa": "^4.0.1",
+    "browserify-sign": "^4.0.4",
+    "browserify-zlib": "^0.2.0",
+    "browserslist": "^4.16.6",
+    "buffer": "^4.9.1",
+    "buffer-from": "^1.1.1",
+    "buffer-xor": "^1.0.3",
+    "builtin-modules": "^1.1.1",
+    "cacache": "^11.3.2",
+    "builtin-status-codes": "^3.0.0",
+    "cache-base": "^1.0.1",
+    "caller-path": "^0.1.0",
+    "caller-callsite": "^2.0.0",
+    "camelcase": "^5.0.0",
+    "callsites": "^0.2.0",
+    "chalk": "^2.4.1",
+    "caniuse-lite": "^1.0.30001246",
+    "caniuse-api": "^3.0.0",
+    "chardet": "^0.7.0",
+    "chokidar": "^2.0.4",
+    "chownr": "^1.1.4",
+    "chrome-trace-event": "^1.0.0",
+    "cipher-base": "^1.0.4",
+    "circular-json": "^0.3.3",
+    "class-utils": "^0.3.6",
+    "cli-cursor": "^2.1.0",
+    "coa": "^2.0.1",
+    "cli-width": "^2.2.0",
+    "code-point-at": "^1.1.0",
+    "cliui": "^4.1.0",
+    "color-convert": "^1.9.3",
+    "collection-visit": "^1.0.0",
+    "color-name": "^1.1.3",
+    "color": "^3.1.0",
+    "color-string": "^1.6.0",
+    "colorette": "^1.2.2",
+    "colors": "^1.1.2",
+    "commander": "^2.17.1",
+    "commondir": "^1.0.1",
+    "component-emitter": "^1.2.1",
+    "concat-stream": "^1.6.2",
+    "concat-map": "^0.0.1",
+    "constants-browserify": "^1.0.0",
+    "console-browserify": "^1.1.0",
+    "contains-path": "^0.1.0",
+    "copy-descriptor": "^0.1.1",
+    "copy-concurrently": "^1.0.5",
+    "core-util-is": "^1.0.2",
+    "cosmiconfig": "^5.0.7",
+    "create-ecdh": "^4.0.3",
+    "create-hash": "^1.2.0",
+    "create-hmac": "^1.1.7",
+    "cross-spawn": "^6.0.5",
+    "crypto-browserify": "^3.12.0",
+    "css-declaration-sorter": "^4.0.1",
+    "css-color-names": "^0.0.4",
+    "css-select": "^2.0.2",
+    "css-select-base-adapter": "^0.1.1",
+    "css-selector-tokenizer": "^0.7.1",
+    "css-tree": "^1.0.0-alpha.28",
+    "css-unit-converter": "^1.1.1",
+    "css-url-regex": "^1.1.0",
+    "css-what": "^2.1.2",
+    "cssesc": "^0.1.0",
+    "cssnano-preset-default": "^4.0.5",
+    "cssnano-util-get-match": "^4.0.0",
+    "cssnano-util-get-arguments": "^4.0.0",
+    "cssnano-util-raw-cache": "^4.0.1",
+    "cssnano-util-same-parent": "^4.0.1",
+    "csso": "^3.5.1",
+    "cyclist": "^0.2.2",
+    "date-now": "^0.1.4",
+    "debug": "^2.6.9",
+    "decamelize": "^1.2.0",
+    "decode-uri-component": "^0.2.0",
+    "des.js": "^1.0.0",
+    "define-properties": "^1.1.3",
+    "deep-is": "^0.1.3",
+    "define-property": "^0.2.5",
+    "del": "^3.0.0",
+    "detect-file": "^1.0.0",
+    "doctrine": "^2.1.0",
+    "diffie-hellman": "^5.0.3",
+    "dom-serializer": "^0.1.0",
+    "domain-browser": "^1.2.0",
+    "domelementtype": "^1.2.1",
+    "domutils": "^1.7.0",
+    "dot-prop": "^4.2.1",
+    "duplexify": "^3.6.1",
+    "elliptic": "^6.5.4",
+    "electron-to-chromium": "^1.3.784",
+    "emojis-list": "^2.1.0",
+    "end-of-stream": "^1.4.1",
+    "enhanced-resolve": "^4.1.0",
+    "entities": "^1.1.2",
+    "errno": "^0.1.7",
+    "error-ex": "^1.3.2",
+    "es-abstract": "^1.12.0",
+    "escalade": "^3.1.1",
+    "escape-string-regexp": "^1.0.5",
+    "eslint-config-standard": "^11.0.0",
+    "es-to-primitive": "^1.2.0",
+    "eslint-module-utils": "^2.2.0",
+    "eslint-plugin-es": "^1.3.2",
+    "eslint-import-resolver-node": "^0.3.2",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "eslint-scope": "^4.0.0",
+    "eslint-utils": "^1.4.3",
+    "eslint-visitor-keys": "^1.1.0",
+    "espree": "^4.1.0",
+    "esprima": "^4.0.1",
+    "esrecurse": "^4.2.1",
+    "esquery": "^1.0.1",
+    "esutils": "^2.0.2",
+    "estraverse": "^4.2.0",
+    "events": "^1.1.1",
+    "evp_bytestokey": "^1.0.3",
+    "expand-brackets": "^2.1.4",
+    "execa": "^0.10.0",
+    "expand-tilde": "^2.0.2",
+    "extend-shallow": "^2.0.1",
+    "extglob": "^2.0.4",
+    "external-editor": "^3.0.3",
+    "fast-json-stable-stringify": "^2.0.0",
+    "fast-deep-equal": "^2.0.1",
+    "fast-levenshtein": "^2.0.6",
+    "fastparse": "^1.1.2",
+    "figgy-pudding": "^3.5.2",
+    "figures": "^2.0.0",
+    "fill-range": "^4.0.0",
+    "file-entry-cache": "^2.0.0",
+    "find-cache-dir": "^2.0.0",
+    "findup-sync": "^2.0.0",
+    "find-up": "^3.0.0",
+    "for-in": "^1.0.2",
+    "fragment-cache": "^0.2.1",
+    "flat-cache": "^1.3.2",
+    "from2": "^2.3.0",
+    "fs-write-stream-atomic": "^1.0.10",
+    "flush-write-stream": "^1.0.3",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "functional-red-black-tree": "^1.0.1",
+    "get-caller-file": "^1.0.3",
+    "get-stream": "^3.0.0",
+    "get-value": "^2.0.6",
+    "glob": "^7.1.3",
+    "glob-parent": "^3.1.0",
+    "global-modules": "^1.0.0",
+    "global-prefix": "^1.0.2",
+    "globals": "^11.9.0",
+    "globby": "^6.1.0",
+    "graceful-fs": "^4.1.15",
+    "has-ansi": "^2.0.0",
+    "has": "^1.0.3",
+    "has-flag": "^3.0.0",
+    "has-value": "^1.0.0",
+    "has-symbols": "^1.0.0",
+    "has-values": "^1.0.0",
+    "hash-base": "^3.0.4",
+    "hash.js": "^1.1.7",
+    "hex-color-regex": "^1.1.0",
+    "homedir-polyfill": "^1.0.3",
+    "hmac-drbg": "^1.0.1",
+    "hsl-regex": "^1.0.0",
+    "hsla-regex": "^1.0.0",
+    "html-comment-regex": "^1.1.2",
+    "hosted-git-info": "^2.8.9",
+    "https-browserify": "^1.0.0",
+    "iconv-lite": "^0.4.24",
+    "icss-replace-symbols": "^1.1.0",
+    "ieee754": "^1.1.12",
+    "icss-utils": "^2.1.0",
+    "iferr": "^0.1.5",
+    "import-cwd": "^2.1.0",
+    "ignore": "^4.0.6",
+    "import-from": "^2.1.0",
+    "import-fresh": "^2.0.0",
+    "import-local": "^2.0.0",
+    "imurmurhash": "^0.1.4",
+    "indexes-of": "^1.0.1",
+    "inflight": "^1.0.6",
+    "indexof": "^0.0.1",
+    "inherits": "^2.0.4",
+    "ini": "^1.3.8",
+    "interpret": "^1.1.0",
+    "inquirer": "^6.2.0",
+    "invert-kv": "^2.0.0",
+    "is-absolute-url": "^2.1.0",
+    "is-accessor-descriptor": "^1.0.0",
+    "is-arrayish": "^0.2.1",
+    "is-binary-path": "^1.0.1",
+    "is-buffer": "^1.1.6",
+    "is-callable": "^1.1.4",
+    "is-data-descriptor": "^1.0.0",
+    "is-color-stop": "^1.1.0",
+    "is-core-module": "^2.5.0",
+    "is-date-object": "^1.0.1",
+    "is-descriptor": "^1.0.2",
+    "is-builtin-module": "^1.0.0",
+    "is-directory": "^0.3.1",
+    "is-extendable": "^0.1.1",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^2.0.0",
+    "is-glob": "^3.1.0",
+    "is-number": "^3.0.0",
+    "is-path-cwd": "^1.0.0",
+    "is-obj": "^1.0.1",
+    "is-path-in-cwd": "^1.0.1",
+    "is-path-inside": "^1.0.1",
+    "is-plain-object": "^2.0.4",
+    "is-regex": "^1.0.4",
+    "is-promise": "^2.1.0",
+    "is-resolvable": "^1.1.0",
+    "is-svg": "^3.0.0",
+    "is-stream": "^1.1.0",
+    "is-symbol": "^1.0.2",
+    "is-windows": "^1.0.2",
+    "isarray": "^1.0.0",
+    "isexe": "^2.0.0",
+    "isobject": "^3.0.1",
+    "js-yaml": "^3.13.1",
+    "js-tokens": "^3.0.2",
+    "jsesc": "^0.5.0",
+    "json-parse-better-errors": "^1.0.2",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "json-schema-traverse": "^0.4.1",
+    "json5": "^0.5.1",
+    "kind-of": "^3.2.2",
+    "lcid": "^2.0.0",
+    "levn": "^0.3.0",
+    "load-json-file": "^2.0.0",
+    "loader-utils": "^1.1.0",
+    "loader-runner": "^2.3.1",
+    "locate-path": "^3.0.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.memoize": "^4.1.2",
+    "lodash.uniq": "^4.5.0",
+    "lodash": "^4.17.21",
+    "lru-cache": "^5.1.1",
+    "make-dir": "^1.3.0",
+    "mamacro": "^0.0.3",
+    "map-age-cleaner": "^0.1.3",
+    "map-cache": "^0.2.2",
+    "map-visit": "^1.0.0",
+    "md5.js": "^1.3.5",
+    "mdn-data": "^1.1.4",
+    "micromatch": "^3.1.10",
+    "miller-rabin": "^4.0.1",
+    "memory-fs": "^0.4.1",
+    "minimalistic-assert": "^1.0.1",
+    "mimic-fn": "^1.2.0",
+    "minimalistic-crypto-utils": "^1.0.1",
+    "mem": "^4.0.0",
+    "minimist": "^1.2.5",
+    "minimatch": "^3.0.4",
+    "mississippi": "^3.0.0",
+    "move-concurrently": "^1.0.1",
+    "mixin-deep": "^1.3.2",
+    "mkdirp": "^0.5.5",
+    "mute-stream": "^0.0.7",
+    "ms": "^2.0.0",
+    "nanomatch": "^1.2.13",
+    "natural-compare": "^1.4.0",
+    "neo-async": "^2.6.0",
+    "nice-try": "^1.0.5",
+    "normalize-package-data": "^2.4.0",
+    "node-releases": "^1.1.73",
+    "normalize-path": "^2.1.1",
+    "node-libs-browser": "^2.1.0",
+    "normalize-range": "^0.1.2",
+    "normalize-url": "^3.3.0",
+    "nth-check": "^1.0.2",
+    "npm-run-path": "^2.0.2",
+    "number-is-nan": "^1.0.1",
+    "num2fraction": "^1.2.2",
+    "object-assign": "^4.1.1",
+    "object-copy": "^0.1.0",
+    "object-keys": "^1.0.12",
+    "object.getownpropertydescriptors": "^2.0.3",
+    "object-visit": "^1.0.1",
+    "object.pick": "^1.3.0",
+    "onetime": "^2.0.1",
+    "object.values": "^1.0.4",
+    "once": "^1.4.0",
+    "optionator": "^0.8.2",
+    "os-tmpdir": "^1.0.2",
+    "os-locale": "^3.0.1",
+    "os-browserify": "^0.3.0",
+    "p-defer": "^1.0.0",
+    "p-finally": "^1.0.0",
+    "p-is-promise": "^1.1.0",
+    "p-limit": "^2.0.0",
+    "p-locate": "^3.0.0",
+    "p-map": "^1.2.0",
+    "pako": "^1.0.6",
+    "p-try": "^2.0.0",
+    "parse-asn1": "^5.1.1",
+    "parallel-transform": "^1.1.0",
+    "parse-passwd": "^1.0.0",
+    "parse-json": "^4.0.0",
+    "pascalcase": "^0.1.1",
+    "path-browserify": "^0.0.0",
+    "path-dirname": "^1.0.2",
+    "path-is-inside": "^1.0.2",
+    "path-exists": "^3.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^2.0.1",
+    "path-parse": "^1.0.7",
+    "path-type": "^2.0.0",
+    "pbkdf2": "^3.0.17",
+    "pify": "^2.3.0",
+    "pinkie": "^2.0.4",
+    "pinkie-promise": "^2.0.1",
+    "pluralize": "^7.0.0",
+    "pkg-dir": "^3.0.0",
+    "posix-character-classes": "^0.1.1",
+    "postcss": "^7.0.5",
+    "postcss-calc": "^7.0.1",
+    "postcss-colormin": "^4.0.2",
+    "postcss-convert-values": "^4.0.1",
+    "postcss-discard-comments": "^4.0.1",
+    "postcss-discard-empty": "^4.0.1",
+    "postcss-discard-duplicates": "^4.0.2",
+    "postcss-discard-overridden": "^4.0.1",
+    "postcss-load-config": "^2.0.0",
+    "postcss-merge-rules": "^4.0.2",
+    "postcss-merge-longhand": "^4.0.9",
+    "postcss-minify-font-values": "^4.0.2",
+    "postcss-minify-gradients": "^4.0.1",
+    "postcss-minify-params": "^4.0.1",
+    "postcss-minify-selectors": "^4.0.1",
+    "postcss-modules-extract-imports": "^1.2.1",
+    "postcss-modules-local-by-default": "^1.2.0",
+    "postcss-modules-scope": "^1.1.0",
+    "postcss-modules-values": "^1.3.0",
+    "postcss-normalize-display-values": "^4.0.1",
+    "postcss-normalize-positions": "^4.0.1",
+    "postcss-normalize-charset": "^4.0.1",
+    "postcss-normalize-string": "^4.0.1",
+    "postcss-normalize-repeat-style": "^4.0.1",
+    "postcss-normalize-timing-functions": "^4.0.1",
+    "postcss-normalize-unicode": "^4.0.1",
+    "postcss-normalize-whitespace": "^4.0.1",
+    "postcss-ordered-values": "^4.1.1",
+    "postcss-normalize-url": "^4.0.1",
+    "postcss-reduce-initial": "^4.0.2",
+    "postcss-reduce-transforms": "^4.0.1",
+    "postcss-unique-selectors": "^4.0.1",
+    "postcss-selector-parser": "^3.1.1",
+    "postcss-svgo": "^4.0.1",
+    "prelude-ls": "^1.1.2",
+    "postcss-value-parser": "^3.3.1",
+    "process": "^0.11.10",
+    "promise-inflight": "^1.0.1",
+    "process-nextick-args": "^2.0.0",
+    "progress": "^2.0.1",
+    "public-encrypt": "^4.0.3",
+    "prr": "^1.0.1",
+    "pump": "^3.0.0",
+    "punycode": "^1.4.1",
+    "q": "^1.5.1",
+    "pumpify": "^1.5.1",
+    "querystring": "^0.2.0",
+    "randombytes": "^2.0.6",
+    "querystring-es3": "^0.2.1",
+    "randomfill": "^1.0.4",
+    "read-pkg": "^2.0.0",
+    "read-cache": "^1.0.0",
+    "read-pkg-up": "^2.0.0",
+    "readdirp": "^2.2.1",
+    "readable-stream": "^2.3.6",
+    "regenerate": "^1.4.0",
+    "regex-not": "^1.0.2",
+    "regexpp": "^2.0.1",
+    "regexpu-core": "^1.0.0",
+    "regjsgen": "^0.2.0",
+    "remove-trailing-separator": "^1.1.0",
+    "regjsparser": "^0.1.5",
+    "repeat-element": "^1.1.3",
+    "require-directory": "^2.1.1",
+    "repeat-string": "^1.6.1",
+    "require-from-string": "^2.0.2",
+    "require-uncached": "^1.0.3",
+    "resolve": "^1.8.1",
+    "require-main-filename": "^1.0.1",
+    "resolve-cwd": "^2.0.0",
+    "resolve-url": "^0.2.1",
+    "restore-cursor": "^2.0.0",
+    "resolve-dir": "^1.0.1",
+    "resolve-from": "^3.0.0",
+    "ret": "^0.1.15",
+    "rgb-regex": "^1.0.1",
+    "rgba-regex": "^1.0.0",
+    "rimraf": "^2.6.2",
+    "ripemd160": "^2.0.2",
+    "run-async": "^2.3.0",
+    "run-queue": "^1.0.3",
+    "rxjs": "^6.3.3",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "safe-regex": "^1.1.0",
+    "schema-utils": "^1.0.0",
+    "sax": "^1.2.4",
+    "serialize-javascript": "^1.5.0",
+    "semver": "^5.6.0",
+    "set-blocking": "^2.0.0",
+    "set-value": "^2.0.0",
+    "sha.js": "^2.4.11",
+    "shebang-command": "^1.2.0",
+    "shebang-regex": "^1.0.0",
+    "signal-exit": "^3.0.2",
+    "simple-swizzle": "^0.2.2",
+    "simple-html-tokenizer": "^0.1.1",
+    "slice-ansi": "^1.0.0",
+    "snapdragon": "^0.8.2",
+    "snapdragon-node": "^2.1.1",
+    "snapdragon-util": "^3.0.1",
+    "source-list-map": "^2.0.1",
+    "source-map": "^0.6.1",
+    "source-map-resolve": "^0.5.2",
+    "source-map-support": "^0.5.10",
+    "spdx-correct": "^3.0.2",
+    "source-map-url": "^0.4.0",
+    "spdx-license-ids": "^3.0.2",
+    "setimmediate": "^1.0.5",
+    "spdx-exceptions": "^2.2.0",
+    "spdx-expression-parse": "^3.0.0",
+    "sprintf-js": "^1.0.3",
+    "split-string": "^3.1.0",
+    "ssri": "^6.0.2",
+    "stable": "^0.1.8",
+    "static-extend": "^0.1.2",
+    "stream-browserify": "^2.0.1",
+    "stream-each": "^1.2.3",
+    "stream-http": "^2.8.3",
+    "stream-shift": "^1.0.0",
+    "string_decoder": "^1.1.1",
+    "string-width": "^2.1.1",
+    "strip-ansi": "^3.0.1",
+    "strip-bom": "^3.0.0",
+    "strip-json-comments": "^2.0.1",
+    "strip-eof": "^1.0.0",
+    "stylehacks": "^4.0.1",
+    "supports-color": "^5.5.0",
+    "table": "^5.1.0",
+    "svgo": "^1.1.1",
+    "terser": "^3.16.1",
+    "through": "^2.3.8",
+    "tapable": "^1.1.0",
+    "terser-webpack-plugin": "^1.2.3",
+    "text-table": "^0.2.0",
+    "through2": "^2.0.5",
+    "timers-browserify": "^2.0.10",
+    "tmp": "^0.0.33",
+    "timsort": "^0.3.0",
+    "to-arraybuffer": "^1.0.1",
+    "to-object-path": "^0.3.0",
+    "to-regex": "^3.0.2",
+    "tslib": "^1.9.3",
+    "to-regex-range": "^2.1.1",
+    "type-check": "^0.3.2",
+    "typedarray": "^0.0.6",
+    "tty-browserify": "^0.0.0",
+    "union-value": "^1.0.0",
+    "uniq": "^1.0.1",
+    "uniqs": "^2.0.0",
+    "unique-filename": "^1.1.1",
+    "unique-slug": "^2.0.1",
+    "unquote": "^1.1.1",
+    "unset-value": "^1.0.0",
+    "upath": "^1.1.0",
+    "uri-js": "^4.2.2",
+    "urix": "^0.1.0",
+    "url": "^0.11.0",
+    "use": "^3.1.1",
+    "util": "^0.10.4",
+    "util.promisify": "^1.0.0",
+    "util-deprecate": "^1.0.2",
+    "validate-npm-package-license": "^3.0.4",
+    "vendors": "^1.0.2",
+    "vm-browserify": "^0.0.4",
+    "watchpack": "^1.6.0",
+    "webpack-sources": "^1.3.0",
+    "which-module": "^2.0.0",
+    "which": "^1.3.1",
+    "wrap-ansi": "^2.1.0",
+    "worker-farm": "^1.6.0",
+    "wrappy": "^1.0.2",
+    "v8-compile-cache": "^2.0.2",
+    "wordwrap": "^1.0.0",
+    "write": "^0.2.1",
+    "xtend": "^4.0.1",
+    "yallist": "^3.1.1",
+    "yargs": "^12.0.5",
+    "yargs-parser": "^11.1.1",
+    "y18n": "^4.0.0"
   }
 }
